# pyspark-mcp-server

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run-server.sh
.github/workflows/: ci.yml  publish.yml
pyspark_mcp_server/: __init__.py  cli.py  mcp_server.py  tools.py
tests/: py_entry_point.py  run-server.sh
