[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pyspark-mcp-server"
version = "0.1.1"
description = "Minimal PySpark MCP server inspired by LakeSail"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastmcp>=2.10.6",
    "loguru",
    "pyspark>=3.5",
    "pandas (>=2.3.2,<3.0.0)",
]
authors = [
    {name = "Sem Sinchenko", email = "semensinchenko@gmail.com"},
    {name = "Russell Jurney", email = "russell.jurney@gmail.com"}
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
pandas-stubs = "^2.3.2.250827"

[tool.black]
line-length = 100
target-version = ['py311']
include = 'pyspark_mcp_server/.*\.py$'

[tool.isort]
profile = "black"
src_paths = ["pyspark_mcp_server"]
line_length = 100

[tool.mypy]
python_version = "3.11"
files = ["pyspark_mcp_server"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
