[project]
name = "pyspark-mcp"
description = "Minimal PySpark MCP server inspired by LakeSail"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click>=8.0",
    "fastmcp>=2.10.6",
    "loguru",
    "pyspark>=3.5",
    "pandas>=2.3.2,<3.0.0",
]
license = "Apache-2.0"
readme = { file = "README.md", content-type = "text/markdown" }
license-files = ["LICENSE"]
keywords = [
    "pyspark",
    "mcp",
    "llm",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Database :: Front-Ends",
]
authors = [
    { name = "Sem Sinchenko", email = "semensinchenko@gmail.com" },
    { name = "Russell Jurney", email = "russell.jurney@gmail.com" }
]
dynamic = ["version"]

[project.urls]
"Code Repository" = "https://github.com/SemyonSinchenko/pyspark-mcp-server"
"Bug Tracker" = "https://github.com/SemyonSinchenko/pyspark-mcp-server/issues"

[project.scripts]
pyspark-mcp = "pyspark_mcp_server.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pyspark_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyspark_mcp_server",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty",
    "pre-commit>=4.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"
include = ["pyspark_mcp_server/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90"]

[tool.ruff.lint.isort]
known-first-party = ["pyspark_mcp_server"]
